<resources>
    <string name="app_name">My Pantry</string>

    <!-- Hint -->

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_full_name">Full Name</string>

    <!-- Form Generics -->

    <string name="form_save_btn">Save</string>
    <string name="form_cancel_btn">Cancel</string>

    <!-- Login -->

    <string name="login_title">Login</string>
    <string name="btn_login">Sign in</string>
    <string name="btn_create_acc">Create Account</string>
    <string name="btn_login_google">Login With Google+</string>
    <string name="btn_login_facebook">Login With Facebook</string>
    <string name="sign_up_text">New here? Sign Up</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- Main Menu -->

    <string name="menu_management">Management</string>
    <string name="menu_category">Categories</string>
    <string name="menu_items">Items</string>
    <string name="menu_shopping">Shopping</string>
    <string name="menu_pantry">Pantry</string>

    <!-- Edit / New Item -->

    <string name="frag_edit_item_title">Edit Item</string>
    <string name="frag_new_item_title">New Item</string>
    <string name="frag_edit_item_name_label">Item Name:</string>
    <string name="frag_edit_item_category_label">Category:</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

</resources>
