<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mayarafelix.mypantry.LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textAlignment="center"
        android:text="@string/login_title"
        android:layout_marginBottom="16dp"
        />

    <EditText
        android:id="@+id/actLoginEdtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        android:inputType="textEmailSubject"/>

    <EditText
        android:id="@+id/actLoginEdtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/actLoginBtnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_login"/>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#000000"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp" />


    <Button
        android:id="@+id/actLoginBtnCreateAcc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_create_acc"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/actLoginBtnLoginGoogle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_login_google"/>

        <Button
            android:id="@+id/actLoginBtnLoginFacebook"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/btn_login_facebook"/>

    </LinearLayout>

</LinearLayout>
