<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/login_horizontal_margin"
    android:paddingRight="@dimen/login_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.mayarafelix.mypantry.SignUpActivity">

    <EditText
        android:id="@+id/actSignUpName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/hint_full_name"
        android:inputType="textPersonName"
        android:drawableStart="@drawable/ic_person"
        android:drawablePadding="8dp"/>

    <EditText
        android:id="@+id/actSignUpEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/hint_email"
        android:inputType="textEmailSubject"
        android:drawableStart="@drawable/ic_email_24dp"
        android:drawablePadding="8dp"/>

    <EditText
        android:id="@+id/actSignUpPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/hint_password"
        android:drawableStart="@drawable/ic_lock_24dp"
        android:inputType="textPassword"
        android:drawablePadding="8dp"/>

    <Button
        android:id="@+id/actLoginBtnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_login"/>

</LinearLayout>
